# lung_pipelin

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  datasets.yaml  datasets_ipf.yaml  ipf.yaml  lung.yaml  lung_depmap_matched_rich.yaml  lung_depmap_matched_rich_baseline.yaml  lung_depmap_matched_slim.yaml  lung_depmap_matched_slim_baseline.yaml  lung_depmap_matched_slim_groupcv_expanded.yaml  lung_depmap_matched_slim_groupcv_rf.yaml  lung_depmap_matched_slim_groupcv_top3.yaml  lung_no_gtex_random_main_models.yaml  lung_no_gtex_random_residual_only.yaml  lung_no_gtex_random_rich_flat_only.yaml  lung_no_gtex_random_rich_main_models.yaml  lung_no_gtex_random_tabnet_only.yaml  lung_rich_gtex_ablation_flatmlp.yaml  lung_rich_gtex_ablation_lgbm_flat.yaml  lung_rich_gtex_ablation_lightgbm.yaml
docs/: data_roles.md  ipf_data_roles.md  ipf_geo_download_workflow.md  ipf_notion_alignment.md  notion_alignment.md  pipeline_overview.md
scripts/: audit_ipf_sources.py  build_ipf_bulk_references.py  build_ipf_cell_state_expression_reference.py  build_ipf_cell_state_reference.py  build_ipf_model_inputs.py  build_ipf_pbmc_validation_reference.py  build_ipf_sample_expression_reference.py  build_ipf_sample_reference.py  download_ipf_geo_sources.py  run_01_standardize_tables.py  run_02_build_disease_context.py  run_03_build_model_inputs.py  run_04_train_baseline.py  run_05_patient_inference.py  run_06_rerank_outputs.py  run_quality_check_like_reference.py
tests/: test_build_disease_context.py  test_build_model_inputs.py  test_build_slim_inputs.py  (+14 more)
(+90 files in other folders)
